# flutmax

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SYNTAX.md  THIRD_PARTY_LICENSES.md  flutmax.code-workspace
.github/workflows/: ci.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml  test_flutmax.py
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: web.rs
crates/flutmax/: Cargo.toml  README.md
crates/flutmax-ast/: Cargo.toml  README.md
crates/flutmax-ast/src/: lib.rs
crates/flutmax-cli/: Cargo.toml  README.md
crates/flutmax-cli/src/: lib.rs  main.rs  sim.rs  validate.rs
crates/flutmax-cli/tests/: compile_validate.rs  graph_equivalence.rs  known_mismatches.txt  max_reference_roundtrip.rs  rnbo_integration.rs  roundtrip.rs  sim_audio.rs  synth_examples.rs
crates/flutmax-cli/tests/fixtures/rnbo/gen_attr_test/: attr_gen.flutmax  gen_attr_main.flutmax  gen_attr_voice.flutmax
crates/flutmax-cli/tests/fixtures/rnbo/gen_test/: gen_main.flutmax  gen_voice.flutmax
crates/flutmax-cli/tests/fixtures/rnbo/midi_test/: midi_main.flutmax  midi_voice.flutmax
crates/flutmax-cli/tests/fixtures/rnbo/multi_rnbo_test/: multi_main.flutmax  voice_a.flutmax  voice_b.flutmax
crates/flutmax-cli/tests/fixtures/rnbo/poly_test/: poly_main.flutmax  poly_voice.flutmax
crates/flutmax-cli/tests/fixtures/rnbo/sine_test/: sine_main.flutmax
crates/flutmax-codegen/: Cargo.toml  README.md
crates/flutmax-codegen/src/: builder.rs  layout.rs  lib.rs  maxpat.rs
crates/flutmax-codegen/tests/: object_coverage.rs
crates/flutmax-decompile/: Cargo.toml  README.md
crates/flutmax-decompile/src/: alias.rs  analyzer.rs  emitter.rs  lib.rs  multi.rs  parser.rs
crates/flutmax-lsp/: Cargo.toml  README.md
crates/flutmax-lsp/src/: main.rs  server.rs
crates/flutmax-objdb/: Cargo.toml  README.md
crates/flutmax-objdb/src/: lib.rs  parser.rs
crates/flutmax-parser/: Cargo.toml  README.md
crates/flutmax-parser/src/: lexer.rs  lib.rs  parse.rs  parser.rs  tokens.rs
crates/flutmax-parser/tests/: edge_cases.rs
crates/flutmax-sema/: Cargo.toml  README.md
crates/flutmax-sema/src/: graph.rs  lib.rs  registry.rs  trigger.rs  type_check.rs
crates/flutmax-sim/: Cargo.toml  README.md
crates/flutmax-sim/src/: audio.rs  gen_sim.rs  lib.rs  midi.rs  ops.rs  rnbo_sim.rs
crates/flutmax-validate/: Cargo.toml  README.md
crates/flutmax-validate/src/: json.rs  lib.rs  report.rs  static_check.rs  structure.rs
crates/flutmax-validate/tests/: edge_cases.rs
crates/flutmax/src/: lib.rs
editors/vscode/: .mocharc.json  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
editors/vscode/examples/: error_demo.flutmax  midi_mono_synth.flutmax  simple_osc.flutmax  stereo_delay.flutmax  subtractive_synth.flutmax
editors/vscode/snippets/: flutmax.json
editors/vscode/src/: extension.ts
editors/vscode/src/test/: runTests.ts
editors/vscode/src/test/integration/: completion.test.ts  definition.test.ts  diagnostics.test.ts  extension-activation.test.ts  helpers.ts  hover.test.ts  index.ts  semantic-tokens.test.ts
editors/vscode/src/test/unit/: grammar.test.ts  language-config.test.ts  package.test.ts  snippets.test.ts
editors/vscode/syntaxes/: flutmax.tmLanguage.json
examples/synths/: README.md  delay_effect.flutmax  fm_synth.flutmax  granular_simple.flutmax  subtractive_synth.flutmax
examples/synths/multi_file_synth/: main_synth.flutmax  mixer_2ch.flutmax  oscillator.flutmax
scripts/max-validator/: README.md  flutmax-inspect.js  flutmax-validate-server.mjs  flutmax-validator.flutmax  flutmax-validator.maxpat
tests/e2e/expected/: L1_sine.maxpat  L2_simple_synth.maxpat  L3_trigger_fanout.maxpat  L3b_control_fanout.maxpat
tests/e2e/fixtures/: L1_sine.flutmax  L2_simple_synth.flutmax  L3_trigger_fanout.flutmax  L3b_control_fanout.flutmax  L4_tuple.flutmax  L5_destructure.flutmax  L6_feedback_delay.flutmax  L7_state_counter.flutmax
tests/e2e/fixtures/abstraction/: fm_synth.flutmax  oscillator.flutmax
tests/e2e/fixtures/patterns/: pattern_fm_synth.flutmax  pattern_multi_osc.flutmax  pattern_stereo_mixer.flutmax  pattern_subtractive_synth.flutmax
tree-sitter-flutmax/: Cargo.toml  README.md  example.flutmax  grammar.js  package.json  tree-sitter.json
tree-sitter-flutmax/bindings/rust/: build.rs  lib.rs
tree-sitter-flutmax/queries/: highlights.scm
tree-sitter-flutmax/src/: grammar.json  node-types.json  parser.c
tree-sitter-flutmax/test/corpus/: attr.txt  comments.txt  connections.txt  declarations.txt  edge_cases.txt  extended_identifiers.txt  feedback.txt  msg.txt  state.txt  tuple.txt  wire.txt
