[workspace]
members = [
    "crates/flutmax-ast",
    "crates/flutmax-parser",
    "crates/flutmax-sema",
    "crates/flutmax-codegen",
    "crates/flutmax-objdb",
    "crates/flutmax-validate",
    "crates/flutmax-decompile",
    "crates/flutmax-cli",
    "crates/flutmax-lsp",
    "crates/flutmax",
    "crates/flutmax-sim",
]
exclude = ["bindings/wasm"]
resolver = "2"
