[package]
name = "flutmax-py"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Python bindings for flutmax (.flutmax <-> .maxpat transpiler)"

[workspace]

[lib]
name = "flutmax_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
flutmax = { version = "0.1.0", path = "../../crates/flutmax" }
