[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flutmax"
version = "0.1.2"
description = "Transpiler between .flutmax text and Max/MSP .maxpat patches"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Repository = "https://github.com/nordsound/flutmax"

[tool.maturin]
features = ["pyo3/extension-module"]
