[package]
name = "flutmax-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings for flutmax (.flutmax <-> .maxpat transpiler)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
flutmax = { version = "0.1.0", path = "../../crates/flutmax" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
