[package]
name = "flutmax-codegen"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nordsound/flutmax"
description = "Code generator: analyzed graph -> .maxpat JSON"

[dependencies]
flutmax-ast = { version = "0.1.0", path = "../flutmax-ast" }
flutmax-sema = { version = "0.1.0", path = "../flutmax-sema" }
flutmax-objdb = { version = "0.1.0", path = "../flutmax-objdb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
