[package]
name = "flutmax-decompile"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nordsound/flutmax"
description = ".maxpat JSON to .flutmax source decompiler"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flutmax-objdb = { version = "0.1.0", path = "../flutmax-objdb" }
