[package]
name = "flutmax-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nordsound/flutmax"
description = "Language Server Protocol implementation for flutmax"

[[bin]]
name = "flutmax-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
flutmax-parser = { version = "0.1.0", path = "../flutmax-parser" }
flutmax-ast = { version = "0.1.0", path = "../flutmax-ast" }
flutmax-sema = { version = "0.1.0", path = "../flutmax-sema" }
flutmax-objdb = { version = "0.1.0", path = "../flutmax-objdb" }
flutmax-validate = { version = "0.1.0", path = "../flutmax-validate" }

[dev-dependencies]
tower = "0.4"
